--- a/admin.html
+++ b/admin.html
@@ -26,11 +26,11 @@
                 <button id="switch-camera" class="control-button">Switch Camera</button>
             </div>
             <div id="name-status-container" style="display: none;">
-                <h3>Scanned Information</h3>
-                <p>Name: <span id="scanned-name"></span></p>
-                <p>Status: <span id="scanned-status"></span></p>
-                <button id="accept-button" style="display: none;">Släpp In</button>
+                <p id="scanned-name">Namn: </p>
+                <p id="scanned-status">Status: </p>
             </div>
+            <button id="accept-button" style="display: none;">Släpp In</button>
+            
             <div id="history-container" class="history-widget">
                 <h3>Scan History</h3>
                 <ul id="history-list"></ul>
