--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">NightClubX</div>
+        <div class="logo">
+            <a href="index.html">NightClubX</a>
+        </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="#help">Help</a>
