--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="index.html">NightClubX</a>
+            <a href="index.html">Cercino</a>
         </div>
         <div class="nav-links">
             <a href="lockscreen.html">Admin</a>
@@ -25,7 +25,7 @@
                 <button type="submit" class="form-button">Get My Ticket</button>
             </form>
             <div id="qr-code-result">
-                
+
             </div>
         </div>
     </main>
