--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             </div>
         </div>
     </main>
+    <script src="index.js"></script>
+
     <footer class="footer">
         <p>&copy; 2024 NightClubX. All Rights Reserved.</p>
     </footer>
