--- a/lockscreen.html
+++ b/lockscreen.html
@@ -14,6 +14,7 @@
             <form id="lockscreen-form">
                 <input type="password" id="password-input" placeholder="Enter password" required>
                 <button type="submit" class="control-button">Unlock</button>
+                <button type="button" class= "back-button" onclick="goBack()">Go Back</button>
             </form>
             <p id="error-message" class="error-message"></p>
         </div>
