--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="index.html">Cercino</a>
+            <a href="index.html">CERCINO</a>
         </div>
         <div class="nav-links">
             <a href="lockscreen.html">Admin</a>
@@ -18,11 +18,11 @@
     </nav>
     <main class="main-content">
         <div class="ticket-container">
-            <h1>Retrieve Your Ticket</h1>
-            <p class="instructions">Enter the Order ID below to retrieve your ticket.</p>
+            <h1>Retrieve your ticket</h1>
+            <p class="instructions">Enter the order ID below to retrieve your ticket.</p>
             <form class="ticket-form">
                 <input type="text" id="orderid" name="orderid" placeholder="Enter ID" required>
-                <button type="submit" class="form-button">Get My Ticket</button>
+                <button type="submit" class="form-button">Get my ticket</button>
             </form>
             <div id="qr-code-result">
 
@@ -32,7 +32,8 @@
     <script src="index.js"></script>
 
     <footer class="footer">
-        <p>&copy; 2024 NightClubX. All Rights Reserved.</p>
+        <p>WEB BY CERCINO STUDIO.</p>
+        <p>Copyright © CERCINO AB 2024 - All Rights Reserved.</p>
     </footer>
 </body>
 </html>
