--- a/admin.html
+++ b/admin.html
@@ -33,7 +33,7 @@
             <button id="accept-button" style="display: none;">Släpp In</button>
         </div>
         <div id="guest-list-container">
-            <h3>Gästlista</h3>
+            <h3>Guest list</h3>
             <ul id="guest-list"></ul>
         </div>
         
