--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="index.html">Cercino</a>
+            <a href="index.html">CERCINO</a>
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
