--- a/admin.html
+++ b/admin.html
@@ -24,7 +24,7 @@
             <div class="bottom-buttons">
                 <button id="toggle-camera" class="control-button">Turn Off Camera</button>
                 <button id="switch-camera" class="control-button">Switch Camera</button>
-                <button id="clear-history" class="control-button">Export Guest List</button>
+                <button id="export-history" class="control-button">Export Guest List</button>
             </div>
             <div id="name-status-container" style="display: none;">
                 <p id="scanned-name">Namn: </p>
