--- a/index.html
+++ b/index.html
@@ -5,35 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ticket Retrieval</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <a href="index.html">CERCINO</a>
-        </div>
-        <div class="nav-links">
-            <a href="lockscreen.html">Admin</a>
-            <a href="#help">Help</a>
-        </div>
-    </nav>
-    <main class="main-content">
-        <div class="ticket-container">
-            <h1>Retrieve your ticket</h1>
-            <p class="instructions">Enter the order ID below to retrieve your ticket.</p>
-            <form class="ticket-form">
-                <input type="text" id="orderid" name="orderid" placeholder="Enter ID" required>
-                <button type="submit" class="form-button">Get my ticket</button>
-            </form>
-            <div id="qr-code-result">
-
+    <div class="background-container"></div> <!-- Bakgrund Wrapper -->
+    <div class="content-container">
+        <nav class="navbar">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="cercino-logo.png" alt="cercino logo" class="logo-image">
+                </a>
             </div>
-        </div>
-    </main>
-    <script src="index.js"></script>
-
-    <footer class="footer">
-        <p>WEB BY CERCINO STUDIO.</p>
-        <p>Copyright © CERCINO AB 2024 - All Rights Reserved.</p>
-    </footer>
+            <div class="nav-links">
+                <a href="lockscreen.html">Admin</a>
+                <a href="#help">Help</a>
+            </div>
+        </nav>
+        <main class="main-content">
+            <div class="ticket-container">
+                <h1>Retrieve your ticket</h1>
+                <p class="instructions">Enter the order ID below to retrieve your ticket.</p>
+                <form class="ticket-form">
+                    <input type="text" id="orderid" name="orderid" placeholder="Enter ID" required>
+                    <button type="submit" class="form-button">Get my ticket</button>
+                </form>
+                <div id="qr-code-result"></div>
+            </div>
+        </main>
+        <footer class="footer">
+            <p>WEB BY CERCINO STUDIO.</p>
+            <p>Copyright © CERCINO AB 2024 - All Rights Reserved.</p>
+        </footer>
+    </div>
 </body>
 </html>
