--- a/admin.html
+++ b/admin.html
@@ -8,9 +8,12 @@
     <script src="auth.js"></script>
 </head>
 <body>
+    <div class="background-container"></div> <!-- Ny wrapper för bakgrund -->
     <nav class="navbar">
         <div class="logo">
-            <a href="index.html">CERCINO</a>
+            <a href="index.html">
+                <img src="cercino-logo.png" alt="cercino logo" class="logo-image">
+            </a>
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
