--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ticket Retrieval</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="index.js"></script>
 </head>
 <body>
     <div class="background-container"></div> <!-- Bakgrund Wrapper -->
