--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <input type="text" id="orderid" name="orderid" placeholder="Enter ID" required>
                     <button type="submit" class="form-button">Get my ticket</button>
                 </form>
-            <div id="qr-code-container"> </div>
+            <div id="qr-code-result"> </div>
             </div>
         </main>
         <footer class="footer">
