--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
                     <input type="text" id="orderid" name="orderid" placeholder="Enter ID" required>
                     <button type="submit" class="form-button">Get my ticket</button>
                 </form>
-            <div id="qr-code-result"> </div>
+            <div id="qr-code-result"> 
+                <p id="customer-name"></p> <!-- Kundens namn visas här -->
+                <img src="" alt="QR Code" id="qr-code-image"> <!-- QR-koden -->
+                <p id="quantity"></p> <!-- Kvantitet visas här -->
+            </div>
             </div>
         </main>
         <footer class="footer">
